force-app/main/default/objects/Enrollment__c/fields/CourseRelation__c.field-meta.xml
<CustomField>
    <fullName>CourseRelation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CourseRelation</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>