force-app/main/default/objects/Enrollment__c/fields/Enrollment_Number__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Number__c</fullName>
    <displayFormat>E-{0000}</displayFormat>
    <label>Enrollment Number</label>
    <type>AutoNumber</type>
</CustomField>