force-app/main/default/objects/Enrollment__c/fields/Final_Fee__c.field-meta.xml
<CustomField>
    <fullName>Final_Fee__c</fullName>
    <formula>CourseRelation__r.Course_Fee__c * (1 - (Discount__c / 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>