force-app/main/default/objects/Enrollment__c/fields/Student_new__c.field-meta.xml
<CustomField>
    <fullName>Student_new__c</fullName>
    <label>Student_new</label>
    <referenceTo>Student_new__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>