force-app/main/default/objects/Enrollment__c/fields/StudentRelation__c.field-meta.xml
<CustomField>
    <fullName>StudentRelation__c</fullName>
    <label>StudentRelation</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>