force-app/main/default/objects/Enrollment__c/recordTypes/Classroom.recordType-meta.xml
<RecordType>
    <fullName>Classroom</fullName>
    <active>true</active>
    <label>Classroom Enrollment</label>
</RecordType>