force-app/main/default/objects/Enrollment__c/recordTypes/Classroom_Enrollment_Layout.recordType-meta.xml
<RecordType>
    <fullName>Classroom_Enrollment_Layout</fullName>
    <active>true</active>
    <label>Classroom Enrollment Layout</label>
</RecordType>