force-app/main/default/objects/Enrollment__c/recordTypes/Online_Enrollment.recordType-meta.xml
<RecordType>
    <fullName>Online_Enrollment</fullName>
    <active>true</active>
    <label>Online Enrollment</label>
</RecordType>