force-app/main/default/objects/Enrollment__c/recordTypes/Online_Enrollment_Layout.recordType-meta.xml
<RecordType>
    <fullName>Online_Enrollment_Layout</fullName>
    <active>true</active>
    <label>Online Enrollment Layout</label>
</RecordType>