force-app/main/default/objects/Enrollment__c/recordTypes/Online_Enrollment_Layouts2.recordType-meta.xml
<RecordType>
    <fullName>Online_Enrollment_Layouts2</fullName>
    <active>true</active>
    <label>Online Enrollment Layouts</label>
</RecordType>